# speedseq

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  speedseq  speedseq_setup.py
.github/workflows/: ci.yaml
annotations/: ceph18.b37.exclude.2014-01-15.bed  ceph18.b37.include.2014-01-15.bed  ceph18.b37.lumpy.exclude.2014-01-15.bed  exclude.cnvnator_100bp.112015.bed  exclude.cnvnator_100bp.GRCh38.20170403.bed
etc/: example_speedseq_install.sh
example/: example_speedseq_install.sh  human_g1k_v37_20_42220611-42542245.fasta.amb  human_g1k_v37_20_42220611-42542245.fasta.ann  human_g1k_v37_20_42220611-42542245.fasta.fai  human_g1k_v37_20_42220611-42542245.fasta.pac  run_speedseq.sh
example/data/: human_g1k_v37_20_42220611-42542245.fasta  human_g1k_v37_20_42220611-42542245.fasta.bwt  human_g1k_v37_20_42220611-42542245.fasta.sa
src/cnvnator/: .gitignore  CITATION  Makefile  README  cnvnator2VCF.pl  license.rtf
src/cnvnator-speedseq/src/: AliParser.hh  HisMaker.cpp  HisMaker.hh  TreeBuilder.cpp
src/cnvnator/src/: AliParser.cpp  Genome.cpp  Genome.hh  Genotyper.cpp  Genotyper.hh  HisMaker.cpp  Interval.cpp  Interval.hh  Makefile  TreeBuilder.hh  cnvnator.cpp
src/cnvnator/src/samtools/: Makefile
src/mbuffer/: .hg_archival.txt  .hgtags  AUTHORS  ChangeLog  INSTALL  Makefile.in  NEWS  README  config.h.in  configure  configure.in  dest.h  log.c  log.h  mbuffer.1.in  mbuffer.c  network.c  network.h
src/samtools-1.3.1/: Makefile  configure
src/scripts/: bamcheck.py  bamcleanheader.py  bamfilterrg.py  bamgroupreads.py  bamheadrg.py  bamtofastq.py
